tests/out/error/redef/redef.in.bt
const the_redef := 123

static the_redef := true

fun the_redef() {}
