tests/out/error/redef/redef.out
error: redefinition of `the_redef`
tests/out/error/redef/redef.in.bt:1:1 conflict: const the_redef i32
tests/out/error/redef/redef.in.bt:3:1 conflict: static the_redef bool
